# marvelous-databricks-course-cremerf

./: .gitignore  .pre-commit-config.yaml  CODEOWNERS  README.md  databricks.yml  main.py  prepare_dataset.py  project-config.yml  pyproject.toml  test.ipynb
.github/: CODEOWNERS
.github/workflows/: ci.yml
notebooks/: 02.mlflow_experiment.ipynb  03.log_and_register_model.ipynb  03.log_and_register_model.py  03.log_and_register_model.py.ipynb  04.log_and_register_custom_model.py  05.log_and_register_fe_model.py  mlflow_experiment.json  model_version.json  run_info.json  test.ipynb
notebooks/week2/: 02.mlflow_experiment.ipynb  03.log_and_register_model.py  04.log_and_register_custom_model.py  05.log_and_register_fe_model.py  README.md  model_version.json
notebooks/week3/: 01.feature_serving.py  02.model_serving.py  03.model_serving_feature_lookup.py  04.AB_test_model_serving.py  README.md
notebooks/week5/: 00.create_source_data.py
prototype/: test.ipynb
src/: main.py  mlflow_train.py  prepare_dataset.py
src/hotel_reservation/: classifier.py  config.py  mlflow_train.py  paths.py  preprocessing.py
week5/: README.md  deploy_model.py  evaluate_model.py  evaluate_model_prototype.py  preprocess.py  preprocess_1.py  train_model.py  train_model_prototype.py
